--- a/user-service.yml
+++ b/user-service.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/userdb
     username: root
-    password: password
+    password: Security@1
   jpa:
     hibernate:
       ddl-auto: update
