--- a/user-service.yml
+++ b/user-service.yml
@@ -1,13 +1,8 @@
-server:
-  port: 8081
-
 spring:
-  application:
-    name: user-service
   datasource:
-    url: jdbc:mysql://localhost:3306/userdb
+    url: jdbc:mysql://localhost:3306/hospital_db
     username: root
-    password: Security@1
+    password: yourpassword
   jpa:
     hibernate:
       ddl-auto: update
