--- a/user-service.yml
+++ b/user-service.yml
@@ -2,7 +2,7 @@ tyspring:
   datasource:
     url: jdbc:mysql://localhost:3306/hospital_db
     username: root
-    password: SecuritY@1
+    password: Security@1
   jpa:
     hibernate:
       ddl-auto: update
