--- a/user-service.yml
+++ b/user-service.yml
@@ -1,8 +1,10 @@
-tyspring:
+spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/hospital_db
+    url: jdbc:mysql://localhost:3306/hospital_user
     username: root
     password: Security@1
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
   jpa:
     hibernate:
       ddl-auto: update
